# taxonomy-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  12  =1.8  CLAUDE.md  README.md  meta.json  papers.csv  project_ideation.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit-auto-fix.yml  update-map.yml
examples/: example_chat.txt
github/workflows/: pre-commit-auto-fix.yml
src/: corpus_generator.py
src/utils/: ask_llm.py  parse_llm.py
taxonomy_generator/: config.py  corpus.py
taxonomy_generator/corpus/: ai_corpus.py  analysis.py  arxiv_helper.py  corpus.py  corpus_instance.py  corpus_types.py  exa_adder.py  filterer.py  generator.py  map_adder.py  prompts.py  reader.py  save_backup.py  semantic_scholar_helper.py  utils.py
taxonomy_generator/corpus/arxiv_scraper/: README.md
taxonomy_generator/corpus/arxiv_scraper/category_metadata/: arxiv_categories.json  corpus_cuttofs.json
taxonomy_generator/corpus/arxiv_scraper/category_metadata/corpus_cuttoffs/: hep-th.json
taxonomy_generator/corpus/arxiv_scraper/scripts/: ai_filter_arxiv_papers.py  analyze_arxiv_cat_citation_counts.py  arxiv_categories_to_json.py  fetch_arxiv_categories.py  fetch_papers_under_category.py  fill_paper_citation_counts.py  filter_arxiv_papers.py
taxonomy_generator/corpus/scripts/: clean_arxiv_jsonl.py  exa_adder.py  fetch_arxiv_categories.py  search_arxiv.py
taxonomy_generator/models/: arxiv_category.py  corpus.py  generator.py
taxonomy_generator/prompts/: general.py
taxonomy_generator/scripts/: format_prompts.py  generator.py  test_1.py
taxonomy_generator/scripts/embeddings/: embeddings.py  find_related.py
taxonomy_generator/scripts/generator/: analyze.py  generator.py  generator_types.py  human_eval.py  main.py  overview_finder.py  prompts.py  sorter.py  types.py  utils.py
taxonomy_generator/scripts/generator/scripts/: analyze.py  human_eval.py  order_papers.py  save_chat_history.py  save_map.py
taxonomy_generator/scripts/random/: arxiv_categories_to_json.py
taxonomy_generator/scripts/test_1/: main.py
taxonomy_generator/utils/: arxiv_overview_papers_search.py  ask_llm.py  count_tokens.py  exa.py  llm.py  parse_llm.py  prompting.py  utils.py
taxonomy_generator/utils/tests/: test_chat.py
tests/: test_arxiv_helper.py  test_chat.py
