[project]
name = "taxonomy-generator"
version = "0.1.0"
description = "Hierarchical taxonomy generator for AI Safety research papers"
authors = [
    {name = "Myles"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anthropic (>=0.49.0,<0.50.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "exa-py (>=1.9.1,<2.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
